--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,297 +1,38 @@
 # .github/workflows/cd.yml
-# Continuous Deployment Pipeline for WebdriverIO
-
 name: Continuous Deployment
 
 on:
-  workflow_run:
-    workflows: ["Continuous Integration"]
-    types:
-      - completed
-    branches: [main, ManHou]
+  push:
+    branches: [ main, ManHou ]
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Target deployment environment'
+        description: 'Target environment'
         required: true
         default: 'staging'
         type: choice
         options:
           - staging
           - production
-      force_deploy:
-        description: 'Force deployment even if CI failed'
-        required: false
-        default: false
-        type: boolean
-
-env:
-  DOCKER_REGISTRY: docker.io
-  IMAGE_NAME: webdriverio-app
-  NODE_VERSION: '18'
 
 jobs:
-  # Check CI Status
-  check-ci-status:
-    name: Verify CI Pipeline
+  deploy:
+    name: Deploy Application
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' || github.event.inputs.force_deploy == 'true'
-    
-    outputs:
-      should_deploy: ${{ steps.check.outputs.deploy }}
-      target_env: ${{ steps.env.outputs.environment }}
-    
-    steps:
-      - name: Check CI results
-        id: check
-        run: |
-          if [[ "${{ github.event.workflow_run.conclusion }}" == "success" || "${{ github.event.inputs.force_deploy }}" == "true" ]]; then
-            echo "deploy=true" >> $GITHUB_OUTPUT
-            echo "CI passed or force deploy requested - proceeding with deployment"
-          else
-            echo "deploy=false" >> $GITHUB_OUTPUT
-            echo "CI failed - skipping deployment"
-          fi
-      
-      - name: Determine target environment
-        id: env
-        run: |
-          if [[ "${{ github.event.inputs.environment }}" != "" ]]; then
-            echo "environment=${{ github.event.inputs.environment }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.ref_name }}" == "main" ]]; then
-            echo "environment=production" >> $GITHUB_OUTPUT
-          else
-            echo "environment=staging" >> $GITHUB_OUTPUT
-          fi
-
-  # Build and Push Docker Image
-  docker-build-push:
-    name: Build & Push Docker Image
-    runs-on: ubuntu-latest
-    needs: check-ci-status
-    if: needs.check-ci-status.outputs.should_deploy == 'true'
-    
-    outputs:
-      image_tag: ${{ steps.meta.outputs.tags }}
-      image_digest: ${{ steps.build.outputs.digest }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      
-      - name: Login to Docker Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=${{ needs.check-ci-status.outputs.target_env }}
-      
-      - name: Build and push Docker image
-        id: build
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
-      
-      - name: Run container security scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.check-ci-status.outputs.target_env }}
-          format: 'table'
-          exit-code: '0'
-
-  # Deploy to Staging
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: [check-ci-status, docker-build-push]
-    if: needs.check-ci-status.outputs.target_env == 'staging' && needs.check-ci-status.outputs.should_deploy == 'true'
-    environment:
-      name: staging
-      url: https://staging.webdriverio-app.com
-    
-    steps:
-      - name: Checkout deployment scripts
-        uses: actions/checkout@v3
-      
-      - name: Setup staging environment variables
+      - name: Run Deployment Script
+        working-directory: ./automation
         run: |
-          echo "DEPLOYMENT_ENV=staging" >> $GITHUB_ENV
-          echo "APP_VERSION=${{ github.sha }}" >> $GITHUB_ENV
-          echo "IMAGE_TAG=${{ needs.docker-build-push.outputs.image_tag }}" >> $GITHUB_ENV
+          chmod +x deploy.sh
+          ./deploy.sh ${{ github.event.inputs.environment || 'staging' }}
       
-      - name: Deploy to staging server
-        run: |
-          echo "Deploying to staging environment..."
-          echo "Image: ${{ env.IMAGE_TAG }}"
-          echo "Environment: ${{ env.DEPLOYMENT_ENV }}"
-          
-          # Simulate deployment commands
-          # In real scenario, you would:
-          # ssh $STAGING_USER@$STAGING_HOST 'docker pull $IMAGE_TAG && docker-compose up -d'
-          # kubectl set image deployment/webdriverio-app webdriverio-app=$IMAGE_TAG
-          
-          echo "Staging deployment completed successfully"
-      
-      - name: Run post-deployment health checks
-        run: |
-          echo "Running staging health checks..."
-          # curl -f https://staging.webdriverio-app.com/health || exit 1
-          echo "Health checks passed"
-      
-      - name: Run staging smoke tests
-        run: |
-          echo "Running staging smoke tests..."
-          # Add your staging-specific smoke tests here
-          echo "Smoke tests completed successfully"
-
-  # Deploy to Production
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [check-ci-status, docker-build-push]
-    if: needs.check-ci-status.outputs.target_env == 'production' && needs.check-ci-status.outputs.should_deploy == 'true'
-    environment:
-      name: production
-      url: https://webdriverio-app.com
-    
-    steps:
-      - name: Checkout deployment scripts
-        uses: actions/checkout@v3
-      
-      - name: Setup production environment variables
-        run: |
-          echo "DEPLOYMENT_ENV=production" >> $GITHUB_ENV
-          echo "APP_VERSION=${{ github.sha }}" >> $GITHUB_ENV
-          echo "IMAGE_TAG=${{ needs.docker-build-push.outputs.image_tag }}" >> $GITHUB_ENV
-      
-      - name: Pre-deployment backup
-        run: |
-          echo "Creating pre-deployment backup..."
-          # Add backup commands here
-          # mysqldump -h $DB_HOST -u $DB_USER -p$DB_PASS $DB_NAME > backup-$(date +%Y%m%d-%H%M%S).sql
-          echo "Backup completed"
-      
-      - name: Blue-Green deployment to production
-        run: |
-          echo "Starting blue-green deployment to production..."
-          echo "Image: ${{ env.IMAGE_TAG }}"
-          echo "Environment: ${{ env.DEPLOYMENT_ENV }}"
-          
-          # Blue-Green deployment simulation
-          echo "Step 1: Deploying to green environment..."
-          # Deploy to green environment
-          
-          echo "Step 2: Running health checks on green..."
-          # Health checks on green environment
-          
-          echo "Step 3: Switching traffic to green..."
-          # Switch load balancer to green
-          
-          echo "Step 4: Monitoring green environment..."
-          # Monitor for 5 minutes
-          
-          echo "Production deployment completed successfully"
-      
-      - name: Run production health checks
-        run: |
-          echo "Running comprehensive production health checks..."
-          # curl -f https://webdriverio-app.com/health || exit 1
-          # curl -f https://webdriverio-app.com/api/status || exit 1
-          echo "All health checks passed"
-      
-      - name: Run production smoke tests
-        run: |
-          echo "Running production smoke tests..."
-          # Add critical production smoke tests
-          echo "Production smoke tests passed"
-
-  # Rollback Capability
-  rollback:
-    name: Rollback Deployment
-    runs-on: ubuntu-latest
-    if: failure() && (needs.deploy-staging.result == 'failure' || needs.deploy-production.result == 'failure')
-    needs: [deploy-staging, deploy-production]
-    environment:
-      name: ${{ needs.check-ci-status.outputs.target_env }}
-    
-    steps:
-      - name: Rollback deployment
-        run: |
-          echo "Deployment failed, initiating rollback..."
-          echo "Target environment: ${{ needs.check-ci-status.outputs.target_env }}"
-          
-          # Add rollback commands
-          # kubectl rollout undo deployment/webdriverio-app
-          # docker-compose down && docker-compose up -d --scale app=2
-          
-          echo "Rollback completed"
-      
-      - name: Verify rollback
-        run: |
-          echo "Verifying rollback success..."
-          # Add verification commands
-          echo "Rollback verification completed"
-
-  # Post-Deployment Monitoring
-  post-deployment:
-    name: Post-Deployment Monitoring
-    runs-on: ubuntu-latest
-    needs: [deploy-staging, deploy-production]
-    if: always() && (needs.deploy-staging.result == 'success' || needs.deploy-production.result == 'success')
-    
-    steps:
-      - name: Setup monitoring alerts
-        run: |
-          echo "Configuring post-deployment monitoring..."
-          # Set up monitoring alerts
-          # Configure dashboards
-          echo "Monitoring setup completed"
-      
-      - name: Generate deployment report
-        run: |
-          cat > deployment-report.json <<EOF
-          {
-            "deployment": {
-              "timestamp": "$(date -Iseconds)",
-              "environment": "${{ needs.check-ci-status.outputs.target_env }}",
-              "version": "${{ github.sha }}",
-              "image": "${{ needs.docker-build-push.outputs.image_tag }}",
-              "status": "success",
-              "deployed_by": "${{ github.actor }}",
-              "workflow_run": "${{ github.run_id }}"
-            }
-          }
-          EOF
-      
-      - name: Upload deployment report
+      - name: Upload Deployment Report
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: deployment-report
-          path: deployment-report.json
-      
-      - name: Send deployment notification
-        run: |
-          echo "Sending deployment notification..."
-          # Send Slack/Teams notification
-          # curl -X POST $SLACK_WEBHOOK_URL -d '{"text":"Deployment completed successfully"}'
-          echo "Deployment notification sent"
+          path: automation/deployment-report-*.json
