--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,4 @@
 # .github/workflows/ci.yml
-# Continuous Integration Pipeline for WebdriverIO
-
 name: Continuous Integration
 
 on:
@@ -8,14 +6,15 @@ on:
     branches: [ main, ManHou, feature/* ]
   pull_request:
     branches: [ main, ManHou ]
+  workflow_dispatch:
 
 env:
   NODE_VERSION: '18'
 
 jobs:
-  # Lint and Code Quality
-  lint:
-    name: Code Quality Check
+  # Build and Test Automation
+  build-test:
+    name: Build and Test
     runs-on: ubuntu-latest
     
     steps:
@@ -26,208 +25,51 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
       
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run linting
+      - name: Run Build Automation
+        working-directory: ./automation
         run: |
-          npm run lint || echo "Linting completed with warnings"
+          echo "Running build automation..."
+          node build-automation.js
+          echo "Build completed"
       
-      - name: Check code formatting
+      - name: Run Test Automation
+        working-directory: ./automation
         run: |
-          npm run format:check || echo "Code formatting check completed"
-
-  # Build Process
-  build:
-    name: Build Application
-    runs-on: ubuntu-latest
-    needs: lint
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+          echo "Running test automation..."
+          node test-automation.js || true
+          echo "Tests completed"
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-      
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build project
-        run: |
-          npm run build
-          echo "Application built successfully"
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-files
-          path: dist/
-
-  # Unit Testing
-  unit-tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    needs: build
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run unit tests
-        run: |
-          npm test -- --reporter json > unit-test-results.json || true
-          echo "Unit tests execution completed"
-      
-      - name: Generate coverage report
-        run: |
-          npm run test:coverage || true
-          echo "Coverage report generated"
-      
-      - name: Upload test results
+      - name: Upload Reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: unit-test-results
+          name: automation-reports
           path: |
-            unit-test-results.json
-            coverage/
-            test-reports/
+            automation/build-reports/
+            automation/test-reports/
 
-  # Integration Testing
-  integration-tests:
-    name: Integration Tests
+  # Docker Build
+  docker-build:
+    name: Docker Build Test
     runs-on: ubuntu-latest
-    needs: unit-tests
-    
-    services:
-      selenium-hub:
-        image: selenium/standalone-chrome:4.15.0
-        options: --shm-size=2gb
-        ports:
-          - 4444:4444
+    needs: build-test
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Wait for Selenium Grid
+      - name: Build Docker Image
+        working-directory: ./automation
         run: |
-          timeout 60s bash -c 'until curl -s http://localhost:4444/wd/hub/status; do sleep 2; done'
-          echo "Selenium Grid is ready"
+          docker build -t webdriverio:ci-${{ github.sha }} .
+          echo "Docker image built successfully"
       
-      - name: Run integration tests
-        env:
-          SELENIUM_HOST: localhost
-          SELENIUM_PORT: 4444
+      - name: Test Docker Container
+        working-directory: ./automation
         run: |
-          npm run test:integration || true
-          echo "Integration tests completed"
-      
-      - name: Upload integration test artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: integration-test-results
-          path: test-reports/
-
-  # Security Scanning
-  security-audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    needs: lint
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run npm audit
-        run: |
-          npm audit --audit-level=moderate || echo "Security audit completed with findings"
-      
-      - name: Check for known vulnerabilities
-        run: |
-          npm audit --production || echo "Production dependency audit completed"
-
-  # PR Comment with Results
-  pr-comment:
-    name: Update Pull Request
-    runs-on: ubuntu-latest
-    needs: [build, unit-tests, integration-tests, security-audit]
-    if: github.event_name == 'pull_request' && always()
-    
-    steps:
-      - name: Download test artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: unit-test-results
-      
-      - name: Comment on PR
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs');
-            let testResults = 'Test results not available';
-            
-            try {
-              if (fs.existsSync('unit-test-results.json')) {
-                const results = JSON.parse(fs.readFileSync('unit-test-results.json', 'utf8'));
-                testResults = `Tests: ${results.stats?.tests || 'N/A'} | Passed: ${results.stats?.passes || 'N/A'} | Failed: ${results.stats?.failures || 'N/A'}`;
-              }
-            } catch (e) {
-              testResults = 'Could not parse test results';
-            }
-            
-            const comment = `## CI Pipeline Results
-            
-            - **Build Status:** ${{ needs.build.result }}
-            - **Unit Tests:** ${{ needs.unit-tests.result }}
-            - **Integration Tests:** ${{ needs.integration-tests.result }}
-            - **Security Audit:** ${{ needs.security-audit.result }}
-            
-            **Test Summary:** ${testResults}
-            
-            [View detailed results](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})`;
-            
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
+          docker run -d --name test-container webdriverio:ci-${{ github.sha }}
+          sleep 5
+          docker logs test-container
+          docker stop test-container
+          docker rm test-container
