--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: Continuous Integration
 
 on:
@@ -12,64 +11,55 @@ env:
   NODE_VERSION: '18'
 
 jobs:
-  # Build and Test Automation
   build-test:
-    name: Build and Test
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-      
-      - name: Run Build Automation
-        working-directory: ./automation
-        run: |
-          echo "Running build automation..."
-          node build-automation.js
-          echo "Build completed"
-      
-      - name: Run Test Automation
-        working-directory: ./automation
-        run: |
-          echo "Running test automation..."
-          node test-automation.js || true
-          echo "Tests completed"
-      
-      - name: Upload Reports
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: automation-reports
-          path: |
-            automation/build-reports/
-            automation/test-reports/
+          cache: 'npm'
 
-  # Docker Build
-  docker-build:
-    name: Docker Build Test
-    runs-on: ubuntu-latest
-    needs: build-test
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Build Docker Image
+      - name: Install deps (npm ci)
+        run: npm ci
+
+      - name: Build (automation)
+        run: npm run build
+
+      - name: Test (automation)
+        run: npm run test
+        # If your test script exits non-zero on failures, artifacts will still upload.
+        # If you prefer the job to *not* fail the PR, add: continue-on-error: true
+
+      - name: Upload build & test artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports-${{ github.run_id }}
+          if-no-files-found: ignore
+          retention-days: 14
+          path: |
+            build-reports/**
+            test-reports/**
+            coverage/**
+            dist/**
+
+      # --- Optional: build and smoke-run your Docker image ---
+      - name: Build Docker image
         working-directory: ./automation
         run: |
           docker build -t webdriverio:ci-${{ github.sha }} .
-          echo "Docker image built successfully"
-      
-      - name: Test Docker Container
+
+      - name: Smoke run container
         working-directory: ./automation
         run: |
-          docker run -d --name test-container webdriverio:ci-${{ github.sha }}
+          docker run --name wdio-ci -d webdriverio:ci-${{ github.sha }}
           sleep 5
-          docker logs test-container
-          docker stop test-container
-          docker rm test-container
+          docker logs wdio-ci || true
+          docker rm -f wdio-ci
