--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,6 @@ on:
     branches: [ main, ManHou ]
   workflow_dispatch:
 
-env:
-  NODE_VERSION: '18'
-
 jobs:
   build-test:
     runs-on: ubuntu-latest
@@ -19,11 +16,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+        fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 18
           cache: 'npm'
 
       - name: Install deps (npm ci)
