--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,56 +1,38 @@
-name: CD
+# .github/workflows/cd.yml
+name: Continuous Deployment
+
 on:
-  push: { branches: [ main, ManHou ] }
+  push:
+    branches: [ main, ManHou ]
   workflow_dispatch:
     inputs:
       environment:
+        description: 'Target environment'
+        required: true
+        default: 'staging'
         type: choice
-        default: staging
-        options: [ staging, production ]
-        description: Target environment
+        options:
+          - staging
+          - production
 
 jobs:
   deploy:
+    name: Deploy Application
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node (for any node-based scripts)
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: |
-            package-lock.json
-            **/package-lock.json
-
-      - name: Ensure Docker Compose v2 is available
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Run Deployment Script
+        working-directory: ./automation
         run: |
-          if ! docker compose version >/dev/null 2>&1; then
-            sudo apt-get update
-            sudo apt-get install -y docker-compose-plugin
-          fi
-          docker compose version
-
-      - name: Make deploy script executable
-        run: chmod +x automation/deploy.sh
-
-      - name: Run deployment
-        env:
-          TARGET_ENV: ${{ inputs.environment || 'staging' }}
-        run: |
-          cd automation
-          ./deploy.sh "$TARGET_ENV"
-
-      - name: Upload deployment artifacts
+          chmod +x deploy.sh
+          ./deploy.sh ${{ github.event.inputs.environment || 'staging' }}
+      
+      - name: Upload Deployment Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: deployment-${{ github.run_id }}
-          if-no-files-found: ignore
-          retention-days: 14
-          path: |
-            automation/deployment-report-*.json
-            automation/deploy_*.log
-            test-reports/**
-            build-reports/**
+          name: deployment-report
+          path: automation/deployment-report-*.json
