--- a/automation/package.json
+++ b/automation/package.json
@@ -19,7 +19,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@wdio/cli": "^9.19.2",
-    "eslint": "^9.35.0"
+    "@wdio/cli": "^8.15.0",
+    "@wdio/local-runner": "^8.15.0",
+    "@wdio/mocha-framework": "^8.15.0",
+    "@wdio/spec-reporter": "^8.15.0",
+    "@wdio/chromedriver-service": "^8.15.0",
+    "eslint": "^8.50.0"
   }
 }
